# gpt-organizer

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  DEBUG.md  Makefile  README.md  debug_config.py  main.py  pyproject.toml
GptCategorize/: __init__.py  categorize.py
GptMove/: __init__.py
scripts/: splitter.py
tests/: conftest.py  test_categorize_flow.py  test_categorize_helpers.py  test_debug_config.py  test_embeddings_qdrant.py  test_labeling_and_clustering.py  test_logging_and_clients.py
